<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/money_photo"
                android:layout_width="80dp"
                android:layout_height="100dp"
                android:background="@color/pink0"
                android:cropToPadding="true"
                android:scaleType="centerInside" />

            <ImageButton
                android:id="@+id/money_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_camera"
                tools:ignore="SpeakableTextPresentCheck" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/money_type"
                android:textColor="@color/pink3" />

            <EditText
                android:id="@+id/money_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/money_type_hint"
                android:textColorHint="@color/pink1"
                tools:ignore="TouchTargetSizeCheck"
                />

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/money_method_text"
                android:textColor="@color/pink3" />

            <EditText
                android:id="@+id/money_method"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/money_method_hint"
                android:textColorHint="@color/pink1"
                tools:ignore="TouchTargetSizeCheck" />


        </LinearLayout>
    </LinearLayout>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/money_money"
        android:textColor="@color/pink3" />

    <EditText
        android:id="@+id/money_money"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/money_money_hint"
        android:minHeight="48dp"
        android:textColorHint="@color/pink1" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/money_date"
        android:textColor="@color/pink3" />

    <Button
        android:id="@+id/money_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pink2"
        />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:text="@string/money_notes_text"
        android:textColor="@color/pink3" />

    <EditText
        android:id="@+id/money_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/money_notes_hint"
        android:minHeight="48dp"
        android:textColorHint="@color/pink1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="151dp"

        />

    <Button
        android:id="@+id/money_containner"
        android:layout_width="366dp"
        android:layout_height="wrap_content"
        android:layout_margin="10px"
        android:text="@string/contant_text"
        android:background="@color/pink3"

        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/money_report"
        android:layout_width="366dp"
        android:layout_height="wrap_content"
        android:layout_margin="10px"
        android:background="@color/pink3"
        android:text="@string/contant_report_text"
        android:textColor="#FFFFFF" />


</LinearLayout>